Fix: 1) Fixed the github contributions section not aligned center 2) Made the floasting balls bit more darker, so they are noticeable

--- a/src/screens/landingScreen/landingScreen.css
+++ b/src/screens/landingScreen/landingScreen.css
@@ -79,6 +79,7 @@
 
 .ContributionsSection{
   display: flex;
+  align-items: center;
   flex-direction: column;
   width: 100%;
   gap: 0.7rem;
